fixed weather on mobile

--- a/src/scss/Weather.scss
+++ b/src/scss/Weather.scss
@@ -12,7 +12,6 @@
     }
     .results {
         width: 100%;
-        min-width: 450px;
         .temp {
             display: flex;
             justify-content: space-between;
